# hs-cdb

./: Cdb.hs  LICENSE  README  hs-cdb.cabal
Database/: CDB.hs
Database/CDB/: Packable.hs  Read.hs  Util.hs  Write.hs
