name:hs-cdb
version:0.1
License:BSD3
License-File:LICENSE
Author:Adam Smith
Homepage:http://github.com/adamsmasher/hs-cdb
Category:Database
Synopsis: A library for reading CDB (Constant Database) files.
Description:
    A library for reading CDB (Constant Database) files.
    .
    CDB files are immutable key-value stores, designed for extremely fast and
    memory-efficient construction and lookup. They can be as large as 4GB, and
    at no point in their construction or use must all data be loaded into
    memory. CDB files can contain multiple values for a given key.
    .
    For more information on the CDB file format, please see:
        <http://cr.yp.to/cdb.html>
    
cabal-version: >= 1.2
build-type:Simple

Library
  Build-Depends:base, bytestring, bytestring-mmap
  Exposed-modules:
    Database.CDB
